<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AppStudy_1</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="txtPattern">Pattern Editor</string>

    <!-- Main Page -->
    <string name="toPrintText">Print Module</string>

    <!-- List View Learning -->
    <string name="toListView">List View</string>
    <string name="title_activity_list_view">Training List View</string>
    <string name="listview_title_name">NAME</string>
    <string name="listview_title_phone">PHONE</string>
    <string name="listview_title_amount">AMOUNT</string>

    <!-- SQLite learning -->
    <string name="toSqlite">SQLite</string>
    <string name="title_activity_sqlite">Training SQLite</string>
    <string name="sqlite_btn_txt_add">Add</string>
    <string name="sqlite_op">Operation</string>
    <string name="sqlite_del">Delete</string>
    <string name="sqlite_add_title"> Welcome Addition!</string>
    <string name="sqlite_add_name">Name:</string>
    <string name="sqlite_add_name_hint">Please input your name</string>
    <string name="sqlite_add_phone">Phone No:</string>
    <string name="sqlite_add_phone_hint">Please input your cell phone number</string>
    <string name="sqlite_add_btn"> ADD </string>
    
    <!-- App Update -->
    <string name="toUpdateView">Check for Updates</string>
    <string name="title_activity_update">App Updates</string>
    <string name="check_update_check_btn">Check</string>
    <string name="check_update_pop_title">Checking for Updates</string>
    <string name="check_update_info">New Update, do you want to update?</string>
    <string name="check_update_update_btn">Update</string>
    <string name="check_update_later">Later</string>
    
    <!-- Content Provider -->
    <string name="toProvider">Content Provider</string>
    
    <!-- ProgressBar -->
    <string name="toProgressBar">Progress Bar</string>
    <string name="title_activity_Progress">Training Progress Bar</string>
    <string name="btn_txt_1">Progress 1</string>
    <string name="btn_txt_2">Progress 2</string>
    
    <!-- Request Web -->
    <string name="title_activity_request_web">Training Request Web</string>
    <string name="toRequestWeb">Request Web</string>
    <string name="req_web_get">Get</string>
    <string name="req_web_post">Post</string>
    
    
</resources>
