<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    
    <LinearLayout 
		android:layout_width="fill_parent"
	    android:layout_height="50dp"
	    android:orientation="horizontal"
        android:gravity="end"
        android:background="@color/normal_gray"
        >
        <Button 
            android:id="@+id/sqlite_btn_add"
            android:text="@string/sqlite_btn_txt_add" 
            android:layout_height="fill_parent"
            android:layout_width="80dp"
            android:textStyle="bold"
            style="@style/main_textBlock_blue"
            />
    </LinearLayout>
    
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="80dp"
	    android:orientation="horizontal" 
	    android:background="@color/normal_title_bk">
    
	    <TextView 
	        android:layout_width="170dp"
	        android:layout_height="match_parent"
	        android:textColor="@color/normal_title_txt"
			android:textSize="23sp"
		    android:gravity="center_vertical|center_horizontal"
		    android:text="@string/listview_title_name"
	        />
	
		<TextView 
			android:layout_width="250dp"
			android:layout_height="80dp"
			android:textColor="@color/normal_title_txt"
			android:textSize="23sp"
		    android:gravity="center_vertical|center_horizontal"
		    android:text="@string/listview_title_phone"
			/>
		
		<TextView 
			android:layout_width="fill_parent"
			android:layout_height="80dp"
			android:textColor="@color/normal_title_txt"
			android:textSize="20sp"
		    android:gravity="center_vertical|center_horizontal"
		    android:text="@string/sqlite_op"
			/>
    </LinearLayout>
    
	<ListView 
	    android:id="@+id/sqlite_list_id"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    />  

</LinearLayout>
